--- a/deploy/last.ini
+++ b/deploy/last.ini
@@ -4,7 +4,7 @@ uid = root
 base = /var/www/html
 
 chdir = %(base)/%(project)
-home = /%(uid)/Env/reset
+home = /%(uid)/Env/%(project)
 module = %(project).wsgi:application
 
 master = true
@@ -14,3 +14,5 @@ socket = /run/uwsgi/%(project).sock
 chown-socket = %(uid):www-data
 chmod-socket = 777
 vacuum = true
+
+logto = /var/log/uwsgi/%(project).log
