--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Django==2.0.1
+Django==2.0.2
+django-datatables-view==1.14.0
 mysqlclient==1.3.12
+Pillow==5.0.0
+python-dateutil==2.6.1
 pytz==2017.3
+six==1.11.0
