--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Django==2.0.2
 django-datatables-view==1.14.0
+django-widget-tweaks==1.4.1
 mysqlclient==1.3.12
-Pillow==5.0.0
+phonenumberslite==8.8.11
 python-dateutil==2.6.1
 pytz==2017.3
-six==1.11.0
+social-auth-app-django==2.1.0
+social-auth-core==1.7.0
+urllib3==1.22
