--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
+Babel==2.5.3
+certifi==2018.1.18
+chardet==3.0.4
+defusedxml==0.5.0
 Django==2.0.2
 django-datatables-view==1.14.0
+django-formtools==2.1
+django-otp==0.4.2
+django-phonenumber-field==1.3.0
+-e git://github.com/darklow/django-suit.git@v2#egg=django-suit
+django-two-factor-auth==1.7.0
 django-widget-tweaks==1.4.1
+idna==2.6
 mysqlclient==1.3.12
+oauthlib==2.0.6
 phonenumberslite==8.8.11
+Pillow==5.0.0
+PyJWT==1.5.3
 python-dateutil==2.6.1
+python3-openid==3.1.0
 pytz==2017.3
+qrcode==4.0.4
+requests==2.18.4
+requests-oauthlib==0.8.0
+six==1.11.0
 social-auth-app-django==2.1.0
 social-auth-core==1.7.0
 urllib3==1.22
