--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,28 @@
 Babel==2.5.3
+bootstrap-admin==0.3.9
 certifi==2018.1.18
 chardet==3.0.4
 defusedxml==0.5.0
+-e git://github.com/hersonls/djamin.git@5b5887c84341065844ab44b6cfc8ccb865ccfdb9#egg=djamin
 Django==2.0.2
+django-admin-bootstrapped==2.5.7
+django-admin2==0.7.1
+django-braces==1.12.0
 django-datatables-view==1.14.0
+django-extra-views==0.8.0
+django-filter==1.0.0
 django-formtools==2.1
+django-grappelli==2.11.1
+django-jet==1.0.7
 django-otp==0.4.2
 django-phonenumber-field==1.3.0
--e git://github.com/darklow/django-suit.git@v2#egg=django-suit
+django-redis==4.9.0
+django-redis-cache==1.7.1
+-e git://github.com/darklow/django-suit.git@613c84cba6f8fb6a23b771da96ab8c05808fb5dc#egg=django_suit
 django-two-factor-auth==1.7.0
 django-widget-tweaks==1.4.1
+djangorestframework==3.5.3
+future==0.16.0
 idna==2.6
 mysqlclient==1.3.12
 oauthlib==2.0.6
@@ -18,11 +31,15 @@ Pillow==5.0.0
 PyJWT==1.5.3
 python-dateutil==2.6.1
 python3-openid==3.1.0
-pytz==2017.3
+pytz==2016.4
+PyYAML==3.12
 qrcode==4.0.4
+redis==2.10.6
 requests==2.18.4
 requests-oauthlib==0.8.0
 six==1.11.0
 social-auth-app-django==2.1.0
 social-auth-core==1.7.0
+ua-parser==0.7.3
 urllib3==1.22
+user-agents==1.1.0
